@@ -248,6 +248,7 @@ char * CWebServer::DisplayHardwareTypesCombo()
 	for (int ii=0; ii<HTYPE_END; ii++)
 	{
 		bool bDoAdd=true;
+#ifndef _DEBUG
 #ifdef WIN32
 		if (
 			(ii == HTYPE_VOLCRAFTCO20)||
@@ -255,6 +256,7 @@ char * CWebServer::DisplayHardwareTypesCombo()
 			(ii == HTYPE_RaspberryBMP085)
 			)
 			bDoAdd=false;
+#endif
 #endif
 		if ((ii == HTYPE_1WIRE)&&(!C1Wire::Have1WireSystem()))
 			bDoAdd=false;
